feat: account table

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -3,7 +3,7 @@
   "account_added": "Акаунтът е добавен успешно",
   "account_balance": "Салдо по сметка",
   "account_create_new": "Създаване на нов акаунт",
-  "account_create_new_short": "Нов акаунт",
+  "account_create_new_short": "Създай акаунт",
   "account_created": "Вашият акаунт беше създаден",
   "account_id": "Идент. № на акаунта",
   "account_import": "Импортиране на съществуващ акаунт",
@@ -13,11 +13,11 @@
   "account_watch_short": "Гледайте акаунт",
   "accounts": "Сметки",
   "actions": "Действия",
-  "activate": "Активирате",
+  "activate": "Защитете",
   "activate_hint": "Моля, подредете думите на паролата в правилния ред. По този начин вие потвърждавате, че сте запазили защитната фраза. Имайте предвид, че няма да можете да контролирате акаунта си без паролата.",
-  "activate_request_successful": "Успешно поискано активиране. Вашият акаунт ще бъде активиран след няколко минути.",
-  "activation_failed": "Активирането не бе успешно:",
-  "activation_success": "Успешно поискано активиране. Вашият акаунт ще бъде активиран след няколко минути.",
+  "activate_request_successful": "Успешно заявена защита на акаунта. Вашият акаунт ще бъде защитен след няколко минути.",
+  "activation_failed": "Защитата е неуспешна:",
+  "activation_success": "Успешно поискана защита. Вашият акаунт ще бъде защитен след няколко минути.",
   "add_message_q": "Добавяне на съобщение?",
   "add_note_to_self_q": "Да добавите бележка към себе си?",
   "add_recipient": "Добавяне на получател",
@@ -246,7 +246,7 @@
   "no": "Не",
   "no_messages_available": "Няма налични съобщения.",
   "no_public_key_activate": "Този акаунт не е безопасен. Кликнете, за да защитите акаунта си.",
-  "no_public_key_warning": "Внимание!: Вашият акаунт няма публичен ключ! Това означава, че не е толкова защитен, колкото другите акаунти. Моля, активирайте акаунта си, за да получите вашия публичен ключ.",
+  "no_public_key_warning": "Внимание! Вашият акаунт няма публичен ключ! Това означава, че не е безопасно да имате средства в тази сметка. Моля, активирайте/защитете акаунта си, за да получите своя публичен ключ.",
   "no_transactions_yet": "Все още няма транзакции.",
   "node_hint_no_multiout": "Не се поддържат многостранни плащания",
   "node_not_set": "Възелът не можа да се промени. Най-вероятно той не е достъпен.",
@@ -523,5 +523,10 @@
   "account_offline": "Само за гледане",
   "account_safe": "безопасно",
   "account_unsafe": "опасно!",
-  "error_connection_fail": "Не може да се свърже с възел. Изглежда, че не е достъпно. Моля, изберете друг"
+  "error_connection_fail": "Не може да се свърже с възел. Изглежда, че не е достъпно. Моля, изберете друг",
+  "delete_selected": "Премахнете избраното",
+  "confirm_delete_accounts": "Потвърдете премахването",
+  "confirm_delete_accounts_hint": "Акаунтите ще бъдат премахнати само от това приложение. Всичките ви средства се съхраняват сигурно в блокчейна и винаги можете да импортирате отново премахнати акаунти с вашата парола.",
+  "confirm_delete_accounts_q": "Сигурни ли сте, че искате да премахнете тези акаунти?",
+  "account_successfully_deleted": "Акаунтът(ите) са премахнати успешно"
 }
