--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -3,7 +3,7 @@
   "account_added": "El compte s'ha afegit correctament",
   "account_balance": "Saldo del compte",
   "account_create_new": "Crear un compte nou",
-  "account_create_new_short": "Compte nou",
+  "account_create_new_short": "Crear compte",
   "account_created": "El teu compte ha estat creat",
   "account_id": "Identificador de compte",
   "account_import": "Importeu el compte existent",
@@ -13,11 +13,11 @@
   "account_watch_short": "Compte de vigilància",
   "accounts": "Comptes",
   "actions": "Accions",
-  "activate": "Activa",
+  "activate": "Protegir",
   "activate_hint": "Si us plau, organitzeu les paraules de la frase de contrasenya en l’ordre correcte. En fer-ho, confirmeu que heu mantingut segura la contrasenya. Recordeu que no podreu controlar el vostre compte sense la frase de contrasenya.",
-  "activate_request_successful": "S'ha sol·licitat l'activació correctament. El vostre compte s'activarà d'aquí a uns quants moments.",
-  "activation_failed": "L'activació ha fallat:",
-  "activation_success": "S'ha sol·licitat l'activació correctament. El vostre compte s'activarà d'aquí a uns quants moments.",
+  "activate_request_successful": "S'ha sol·licitat correctament la protecció del compte. El vostre compte estarà protegit en uns moments.",
+  "activation_failed": "La protecció ha fallat:",
+  "activation_success": "Protecció sol·licitada correctament. El vostre compte estarà protegit en uns moments.",
   "add_message_q": "Voleu afegir un missatge?",
   "add_note_to_self_q": "Voleu afegir una nota?",
   "add_recipient": "Afegeix un destinatari",
@@ -246,7 +246,7 @@
   "no": "No",
   "no_messages_available": "No hi ha missatges disponibles.",
   "no_public_key_activate": "Aquest compte no és segur. Feu clic per protegir el vostre compte.",
-  "no_public_key_warning": "Advertiment: el vostre compte no té una clau pública. Això significa que no està tan protegit com altres comptes. Activeu el vostre compte per obtenir la vostra clau pública.",
+  "no_public_key_warning": "Avís! El vostre compte no té una clau pública! Això vol dir que no és segur tenir fons en aquest compte. Activeu/protegiu el vostre compte per obtenir la vostra clau pública.",
   "no_transactions_yet": "Encara no hi ha cap transacció.",
   "node_hint_no_multiout": "No s'admeten pagaments multipagament",
   "node_not_set": "No s'ha pogut canviar de node. El més probable és que no s’hi pugui arribar.",
@@ -523,5 +523,10 @@
   "account_offline": "Només mira",
   "account_safe": "Caixa forta",
   "account_unsafe": "Insegur!",
-  "error_connection_fail": "No s'ha pogut connectar a un node. Sembla que no és accessible. Si us plau, trieu-ne un altre"
+  "error_connection_fail": "No s'ha pogut connectar a un node. Sembla que no és accessible. Si us plau, trieu-ne un altre",
+  "delete_selected": "Elimina els seleccionats",
+  "confirm_delete_accounts": "Confirmeu l'eliminació",
+  "confirm_delete_accounts_hint": "Els comptes només s'eliminaran d'aquesta aplicació. Tots els vostres fons s'emmagatzemen de manera segura a la cadena de blocs i sempre podeu tornar a importar els comptes eliminats amb la vostra frase de contrasenya.",
+  "confirm_delete_accounts_q": "Esteu segur que voleu eliminar aquests comptes?",
+  "account_successfully_deleted": "Els comptes s'han eliminat correctament"
 }
