--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -3,7 +3,7 @@
   "account_added": "Účet byl úspěšně přidán",
   "account_balance": "Zůstatek na účtu",
   "account_create_new": "Vytvořit nový účet",
-  "account_create_new_short": "Nový účet",
+  "account_create_new_short": "Vytvořit účet",
   "account_created": "Váš účet byl vytvořen",
   "account_id": "Číslo účtu",
   "account_import": "Importujte stávající účet",
@@ -13,11 +13,11 @@
   "account_watch_short": "Sledujte účet",
   "accounts": "Účty",
   "actions": "Akce",
-  "activate": "aktivovat",
+  "activate": "Chránit",
   "activate_hint": "Uspořádejte slova hesla ve správném pořadí. Tímto způsobem potvrzujete, že jste udrželi přístupovou frázi v bezpečí. Pamatujte, že bez přístupové fráze nebudete moci svůj účet ovládat.",
-  "activate_request_successful": "Úspěšně požádáno o aktivaci. Váš účet bude aktivován za několik okamžiků.",
-  "activation_failed": "Aktivace se nezdařila:",
-  "activation_success": "Úspěšně požádáno o aktivaci. Váš účet bude aktivován za několik okamžiků.",
+  "activate_request_successful": "Úspěšně zažádáno o ochranu účtu. Váš účet bude během několika okamžiků chráněn.",
+  "activation_failed": "Ochrana selhala:",
+  "activation_success": "Úspěšně zažádáno o ochranu. Váš účet bude během několika okamžiků chráněn.",
   "add_message_q": "Přidat zprávu?",
   "add_note_to_self_q": "Přidat poznámku k sobě?",
   "add_recipient": "Přidat adresáta",
@@ -245,8 +245,8 @@
   "next_block": "Další blok",
   "no": "Ne",
   "no_messages_available": "Nejsou k dispozici žádné zprávy.",
-  "no_public_key_activate": "Tento účet není bezpečný. Kliknutím zabezpečte svůj účet.",
-  "no_public_key_warning": "Varování !: Váš účet nemá veřejný klíč! To znamená, že není tak chráněn jako jiné účty. Aktivujte prosím svůj účet, abyste získali svůj veřejný klíč.",
+  "no_public_key_activate": "Tento účet není bezpečný. Kliknutím ochráníte svůj účet.",
+  "no_public_key_warning": "Varování! Váš účet nemá veřejný klíč! To znamená, že není bezpečné mít prostředky na tomto účtu. Pro získání veřejného klíče prosím aktivujte/ochraňte svůj účet.",
   "no_transactions_yet": "Zatím žádné transakce.",
   "node_hint_no_multiout": "Nejsou podporovány žádné platby multiout",
   "node_not_set": "Uzel se nepodařilo změnit. S největší pravděpodobností není dosažitelná.",
@@ -523,5 +523,10 @@
   "account_offline": "Pouze sledovat",
   "account_safe": "Bezpečný",
   "account_unsafe": "Nebezpečný!",
-  "error_connection_fail": "Nelze se připojit k uzlu. Zdá se, že to není dosažitelné. Prosím, vyberte jiný"
+  "error_connection_fail": "Nelze se připojit k uzlu. Zdá se, že to není dosažitelné. Prosím, vyberte jiný",
+  "delete_selected": "Odstranit vybrané",
+  "confirm_delete_accounts": "Potvrďte odebrání",
+  "confirm_delete_accounts_hint": "Účty budou odstraněny pouze z této aplikace. Všechny vaše prostředky jsou bezpečně uloženy na blockchainu a odstraněné účty můžete kdykoli znovu importovat pomocí své přístupové fráze.",
+  "confirm_delete_accounts_q": "Opravdu chcete tyto účty odstranit?",
+  "account_successfully_deleted": "Účty byly úspěšně odstraněny"
 }
