--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -3,7 +3,7 @@
   "account_added": "Konto erfolgreich hinzugefügt",
   "account_balance": "Kontostand",
   "account_create_new": "Ein neues Konto erstellen",
-  "account_create_new_short": "Neues Konto",
+  "account_create_new_short": "Konto erstellen",
   "account_created": "Dein Konto wurde erstellt",
   "account_id": "Konto-ID",
   "account_import": "Vorhandenes Konto importieren",
@@ -13,11 +13,11 @@
   "account_watch_short": "Konto ansehen",
   "accounts": "Konten",
   "actions": "Aktionen",
-  "activate": "Aktivieren",
+  "activate": "Schützen",
   "activate_hint": "Bitte ordne die Wörter der Passphrase in der richtigen Reihenfolge an. Damit bestätigst Du, dass Du die Passphrase sicher verwahrt haben. Beachte, dass Du Dein Konto ohne die Passphrase nicht vollständig verwenden kannst.",
-  "activate_request_successful": "Aktivierung erfolgreich angefordert. Dein Konto wird in wenigen Augenblicken aktiviert.",
-  "activation_failed": "Aktivierung fehlgeschlagen:",
-  "activation_success": "Aktivierung erfolgreich angefordert. Dein Konto wird in wenigen Augenblicken aktiviert.",
+  "activate_request_successful": "Kontoschutz erfolgreich angefordert. Ihr Konto wird in wenigen Augenblicken geschützt.",
+  "activation_failed": "Schutz fehlgeschlagen:",
+  "activation_success": "Schutz erfolgreich angefordert. Ihr Konto wird in wenigen Augenblicken geschützt.",
   "add_message_q": "Nachricht hinzufügen?",
   "add_note_to_self_q": "Notiz zu Selbst hinzufügen?",
   "add_recipient": "Empfänger hinzufügen",
@@ -66,7 +66,7 @@
   "broadcast": "Übertragung",
   "buy": "Kaufen",
   "buyer": "Käufer",
-  "cancel": "Stornieren",
+  "cancel": "Abbrechen",
   "cheap_fee": "Billig",
   "choose_delimiter": "Wähle ein Trennzeichen",
   "click_for_changes": "Klicke hier, um zu sehen, was sich geändert hat",
@@ -245,8 +245,8 @@
   "next_block": "Nächster Block",
   "no": "Nein",
   "no_messages_available": "Keine Nachrichten verfügbar.",
-  "no_public_key_activate": "Dieses Konto ist nicht sicher. Klicken Sie hier, um Ihr Konto zu sichern.",
-  "no_public_key_warning": "Achtung!: Dein Konto hat keinen öffentlichen Schlüssel! Dies bedeutet, dass es nicht so geschützt ist wie andere Konten. Bitte aktiviere Dein Konto, um den öffentlichen Schlüssel zu erhalten.",
+  "no_public_key_activate": "Dieses Konto ist nicht sicher. Klicken Sie hier, um Ihr Konto zu schützen.",
+  "no_public_key_warning": "Warnung! Ihr Konto hat keinen öffentlichen Schlüssel! Das bedeutet, dass es nicht sicher ist, Geld auf diesem Konto zu haben. Bitte aktivieren/schützen Sie Ihr Konto, um Ihren öffentlichen Schlüssel zu erhalten.",
   "no_transactions_yet": "Noch keine Transaktionen.",
   "node_hint_no_multiout": "Keine Multiout-Zahlungen unterstützt",
   "node_not_set": "Der Peer konnte nicht geändert werden. Höchstwahrscheinlich ist er nicht erreichbar.",
@@ -523,5 +523,10 @@
   "account_offline": "Nur ansehen",
   "account_safe": "Sicher",
   "account_unsafe": "Unsicher!",
-  "error_connection_fail": "Es konnte keine Verbindung zu einem Knoten hergestellt werden. Bitte wählen Sie eine anderen aus"
+  "error_connection_fail": "Es konnte keine Verbindung zu einem Knoten hergestellt werden. Bitte wählen Sie eine anderen aus",
+  "delete_selected": "Ausgewählte entfernen",
+  "confirm_delete_accounts": "Entfernen bestätigen",
+  "confirm_delete_accounts_hint": "Die Konten werden nur aus dieser Anwendung entfernt. Alle Ihre Gelder werden sicher in der Blockchain gespeichert und Sie können entfernte Konten jederzeit mit Ihrer Passphrase erneut importieren.",
+  "confirm_delete_accounts_q": "Möchten Sie diese Konten wirklich entfernen?",
+  "account_successfully_deleted": "Konto oder Konten erfolgreich entfernt"
 }
