--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -3,7 +3,7 @@
   "account_added": "Ο λογαριασμός προστέθηκε με επιτυχία",
   "account_balance": "Υπόλοιπο λογαριασμού",
   "account_create_new": "Δημιούργησε νέο λογαριασμό",
-  "account_create_new_short": "Νέος λογαριασμός",
+  "account_create_new_short": "Δημιουργήστε λογαριασμό",
   "account_created": "Ο λογαριασμός σας έχει δημιουργηθεί",
   "account_id": "Αναγνωριστικό λογαριασμού",
   "account_import": "Εισαγωγή υπάρχοντος λογαριασμού",
@@ -13,11 +13,11 @@
   "account_watch_short": "Παρακολούθηση λογαριασμού",
   "accounts": "Λογαριασμοί",
   "actions": "Ενέργειες",
-  "activate": "Θέτω εις ενέργειαν",
+  "activate": "Προστατεύω",
   "activate_hint": "Τακτοποιήστε τις λέξεις της φράσης πρόσβασης με τη σωστή σειρά. Με αυτόν τον τρόπο, επιβεβαιώνετε ότι έχετε διατηρήσει την φράση πρόσβασης ασφαλή. Λάβετε υπόψη ότι δεν θα μπορείτε να ελέγχετε τον λογαριασμό σας χωρίς τη φράση πρόσβασης.",
-  "activate_request_successful": "Ζητήθηκε με επιτυχία ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
-  "activation_failed": "Η ενεργοποίηση απέτυχε:",
-  "activation_success": "Ζητήθηκε με επιτυχία ενεργοποίηση. Ο λογαριασμός σας θα ενεργοποιηθεί σε λίγα λεπτά.",
+  "activate_request_successful": "Ζητήθηκε επιτυχώς προστασία λογαριασμού. Ο λογαριασμός σας θα προστατευτεί σε λίγα λεπτά.",
+  "activation_failed": "Η προστασία απέτυχε:",
+  "activation_success": "Ζητήθηκε επιτυχώς προστασία. Ο λογαριασμός σας θα προστατευτεί σε λίγα λεπτά.",
   "add_message_q": "Πρόσθεσε ενα μύνημα?",
   "add_note_to_self_q": "Προσθήκη σημείωσης στον εαυτό;",
   "add_recipient": "Πρόσθεσε παραλήπτη",
@@ -245,8 +245,8 @@
   "next_block": "Επόμενο μπλοκ",
   "no": "Οχι",
   "no_messages_available": "Δεν υπάρχουν διαθέσιμα μηνύματα.",
-  "no_public_key_activate": "Αυτός ο λογαριασμός δεν είναι ασφαλής. Κάντε κλικ για να ασφαλίσετε τον λογαριασμό σας.",
-  "no_public_key_warning": "Προειδοποίηση !: Ο λογαριασμός σας δεν διαθέτει δημόσιο κλειδί! Αυτό σημαίνει ότι δεν προστατεύεται τόσο με άλλους λογαριασμούς. Ενεργοποιήστε τον λογαριασμό σας για να αποκτήσετε το δημόσιο κλειδί σας.",
+  "no_public_key_activate": "Αυτός ο λογαριασμός δεν είναι ασφαλής. Κάντε κλικ για προστασία του λογαριασμού σας.",
+  "no_public_key_warning": "Προειδοποίηση! Ο λογαριασμός σας δεν έχει δημόσιο κλειδί! Αυτό σημαίνει ότι δεν είναι ασφαλές να έχετε χρήματα σε αυτόν τον λογαριασμό. Ενεργοποιήστε/προστατέψτε τον λογαριασμό σας για να αποκτήσετε το δημόσιο κλειδί σας.",
   "no_transactions_yet": "Δεν υπάρχουν ακόμη συναλλαγές.",
   "node_hint_no_multiout": "Δεν υποστηρίζονται πληρωμές πολλαπλών εξόδων",
   "node_not_set": "Δεν ήταν δυνατή η αλλαγή κόμβου. Πιθανότατα δεν είναι προσβάσιμο.",
@@ -523,5 +523,10 @@
   "account_offline": "Παρακολουθήστε μόνο",
   "account_safe": "Ασφαλής",
   "account_unsafe": "Επισφαλής!",
-  "error_connection_fail": "Δεν ήταν δυνατή η σύνδεση σε έναν κόμβο. Φαίνεται ότι δεν είναι προσβάσιμο. Παρακαλώ επιλέξτε άλλο"
+  "error_connection_fail": "Δεν ήταν δυνατή η σύνδεση σε έναν κόμβο. Φαίνεται ότι δεν είναι προσβάσιμο. Παρακαλώ επιλέξτε άλλο",
+  "delete_selected": "Αφαιρέστε τα επιλεγμένα",
+  "confirm_delete_accounts": "Επιβεβαιώστε την αφαίρεση",
+  "confirm_delete_accounts_hint": "Οι λογαριασμοί θα αφαιρεθούν μόνο από αυτήν την εφαρμογή. Όλα τα χρήματά σας αποθηκεύονται με ασφάλεια στο blockchain και μπορείτε πάντα να εισαγάγετε εκ νέου λογαριασμούς που αφαιρέσατε με τη φράση πρόσβασής σας.",
+  "confirm_delete_accounts_q": "Είστε βέβαιοι ότι θέλετε να καταργήσετε αυτούς τους λογαριασμούς;",
+  "account_successfully_deleted": "Οι λογαριασμοί καταργήθηκαν με επιτυχία"
 }
