--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -3,7 +3,7 @@
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
   "account_create_new": "Create a new account",
-  "account_create_new_short": "New Account",
+  "account_create_new_short": "Create Account",
   "account_created": "Your account has been created",
   "account_id": "Account ID",
   "account_import": "Import existing account",
@@ -15,11 +15,11 @@
   "account_details": "Account Details",
   "accounts": "Accounts",
   "actions": "Actions",
-  "activate": "Activate",
+  "activate": "Protect",
   "activate_hint": "Please arrange the words of the passphrase in the correct order. By doing so, you confirm that you have kept the passphrase safe. Keep in mind that you won't be able to control your account without the passphrase.",
-  "activate_request_successful": "Successfully requested activation. Your account will be activated in a few moments.",
-  "activation_failed": "Activation failed: ",
-  "activation_success": "Successfully requested activation. Your account will be activated in a few moments.",
+  "activate_request_successful": "Successfully requested account protection. Your account will be protected in a few moments.",
+  "activation_failed": "Protection failed: ",
+  "activation_success": "Successfully requested protection. Your account will be protected in a few moments.",
   "add_message_q": "Add a Message?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
@@ -267,8 +267,8 @@
   "next_block": "Next Block",
   "no": "No",
   "no_messages_available": "No messages available.",
-  "no_public_key_activate": "This account is not safe. Click to secure your account. ",
-  "no_public_key_warning": "Warning!: Your account does not have a public key! This means it's not as protected as other accounts. Please activate your account to obtain your public key.",
+  "no_public_key_activate": "This account is not safe. Click to protect your account. ",
+  "no_public_key_warning": "Warning! Your account does not have a public key! This means it's not safe to have funds on that account. Please activate/protect your account to obtain your public key.",
   "no_transactions_yet": "No transactions yet.",
   "node_hint_no_multiout": "No multiout payments supported",
   "node_not_set": "Could not change node. Most probable it is not reachable.",
@@ -524,5 +524,9 @@
   "more_alias_on": "More about Aliases on",
   "no_aliases_available": "No Aliases available",
   "owner": "Owner",
-  "recipient_required": "Recipient is required"
+  "recipient_required": "Recipient is required",
+  "confirm_delete_accounts": "Confirm Removal",
+  "confirm_delete_accounts_q": "Are you sure you want to remove these accounts?",
+  "confirm_delete_accounts_hint": "The accounts will be removed only from this application. All your funds are securely stored on the blockchain and you can always re-import removed accounts with your passphrase.",
+  "account_successfully_deleted": "Account(s) successfully removed"
 }
