--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -3,7 +3,7 @@
   "account_added": "Cuenta agregada correctamente",
   "account_balance": "Balance de la cuenta",
   "account_create_new": "Crear una cuenta nueva",
-  "account_create_new_short": "Nueva cuenta",
+  "account_create_new_short": "Crear cuenta",
   "account_created": "Tu cuenta ha sido creada",
   "account_id": "ID de la cuenta",
   "account_import": "Importar cuenta existente",
@@ -13,11 +13,11 @@
   "account_watch_short": "Ver cuenta",
   "accounts": "Cuentas",
   "actions": "Comportamiento",
-  "activate": "Activar",
+  "activate": "Proteger",
   "activate_hint": "Organice las palabras de la frase de contraseña en el orden correcto. Al hacerlo, confirma que ha mantenido segura la frase de contraseña. Tenga en cuenta que no podrá controlar su cuenta sin la frase de contraseña.",
-  "activate_request_successful": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
-  "activation_failed": "Activación fallida:",
-  "activation_success": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
+  "activate_request_successful": "Protección de cuenta solicitada con éxito. Su cuenta estará protegida en unos momentos.",
+  "activation_failed": "Falló la protección:",
+  "activation_success": "Protección solicitada con éxito. Su cuenta estará protegida en unos momentos.",
   "add_message_q": "¿Desea añadir un mensaje?",
   "add_note_to_self_q": "¿Agregar nota a uno mismo?",
   "add_recipient": "Agregar destinatario",
@@ -245,8 +245,8 @@
   "next_block": "Siguiente bloque",
   "no": "No",
   "no_messages_available": "No hay mensajes disponibles.",
-  "no_public_key_activate": "Esta cuenta no es segura. Haga clic para asegurar su cuenta.",
-  "no_public_key_warning": "¡Advertencia !: ¡Tu cuenta no tiene una clave pública! Esto significa que no está tan protegido como otras cuentas. Active su cuenta para obtener su clave pública.",
+  "no_public_key_activate": "Esta cuenta no es segura. Haga clic para proteger su cuenta.",
+  "no_public_key_warning": "¡Advertencia! ¡Tu cuenta no tiene una clave pública! Esto significa que no es seguro tener fondos en esa cuenta. Activa/protege tu cuenta para obtener tu clave pública.",
   "no_transactions_yet": "Aún no hay transacciones.",
   "node_hint_no_multiout": "No se admiten pagos múltiples",
   "node_not_set": "No se pudo cambiar el nodo. Lo más probable es que no sea accesible.",
@@ -523,5 +523,10 @@
   "account_offline": "Ver solo",
   "account_safe": "Seguro",
   "account_unsafe": "¡Inseguro!",
-  "error_connection_fail": "No se pudo conectar a un nodo. Parece que no es accesible. Por favor elije otro"
+  "error_connection_fail": "No se pudo conectar a un nodo. Parece que no es accesible. Por favor elije otro",
+  "delete_selected": "Eliminar selección",
+  "confirm_delete_accounts": "Confirmar eliminación",
+  "confirm_delete_accounts_hint": "Las cuentas se eliminarán solo de esta aplicación. Todos sus fondos se almacenan de forma segura en la cadena de bloques y siempre puede volver a importar las cuentas eliminadas con su frase de contraseña.",
+  "confirm_delete_accounts_q": "¿Está seguro de que desea eliminar estas cuentas?",
+  "account_successfully_deleted": "Cuenta(s) eliminada(s) con éxito"
 }
