--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -3,7 +3,7 @@
   "account_added": "Compte ajouté avec succès",
   "account_balance": "Solde du compte",
   "account_create_new": "Créer un nouveau compte",
-  "account_create_new_short": "Nouveau compte",
+  "account_create_new_short": "Créer un compte",
   "account_created": "Votre compte a été créé",
   "account_id": "identifiant de compte",
   "account_import": "Importer un compte existant",
@@ -13,11 +13,11 @@
   "account_watch_short": "Compte de surveillance",
   "accounts": "Comptes",
   "actions": "Actions",
-  "activate": "Activer",
+  "activate": "Protéger",
   "activate_hint": "Veuillez organiser les mots de la phrase secrète dans le bon ordre. Ce faisant, vous confirmez que vous avez conservé la phrase secrète en toute sécurité. Gardez à l'esprit que vous ne pourrez pas contrôler votre compte sans la phrase secrète.",
-  "activate_request_successful": "Activation demandée avec succès. Votre compte sera activé dans quelques instants.",
-  "activation_failed": "Activation echouée:",
-  "activation_success": "Activation demandée avec succès. Votre compte sera activé dans quelques instants.",
+  "activate_request_successful": "La protection du compte a bien été demandée. Votre compte sera protégé dans quelques instants.",
+  "activation_failed": "Échec de la protection :",
+  "activation_success": "Protection demandée avec succès. Votre compte sera protégé dans quelques instants.",
   "add_message_q": "Ajouter un message?",
   "add_note_to_self_q": "Ajouter une note à moi-même ?",
   "add_recipient": "Ajouter un destinataire",
@@ -245,8 +245,8 @@
   "next_block": "Bloc suivant",
   "no": "Non",
   "no_messages_available": "Aucun message disponible.",
-  "no_public_key_activate": "Ce compte n'est pas sécurisé. Cliquez pour sécuriser votre compte.",
-  "no_public_key_warning": "Attention ! : Votre compte n'a pas de clé publique ! Cela signifie qu'il n'est pas aussi protégé que les autres comptes. Veuillez activer votre compte pour obtenir votre clé publique.",
+  "no_public_key_activate": "Ce compte n'est pas sécurisé. Cliquez pour protéger votre compte.",
+  "no_public_key_warning": "Avertissement! Votre compte n'a pas de clé publique ! Cela signifie qu'il n'est pas sûr d'avoir des fonds sur ce compte. Veuillez activer/protéger votre compte pour obtenir votre clé publique.",
   "no_transactions_yet": "Aucune transaction pour le moment.",
   "node_hint_no_multiout": "Aucun paiement multiple pris en charge",
   "node_not_set": "Impossible de changer de nœud. Très probablement, il n'est pas accessible.",
@@ -523,5 +523,10 @@
   "account_offline": "Regarder uniquement",
   "account_safe": "Sûr",
   "account_unsafe": "Peu sûr!",
-  "error_connection_fail": "Impossible de se connecter à un nœud. Apparemment ce n'est pas joignable. Veuillez en choisir un autre"
+  "error_connection_fail": "Impossible de se connecter à un nœud. Apparemment ce n'est pas joignable. Veuillez en choisir un autre",
+  "delete_selected": "Enlever la sélection",
+  "confirm_delete_accounts": "Confirmer la suppression",
+  "confirm_delete_accounts_hint": "Les comptes seront supprimés uniquement de cette application. Tous vos fonds sont stockés en toute sécurité sur la blockchain et vous pouvez toujours réimporter les comptes supprimés avec votre mot de passe.",
+  "confirm_delete_accounts_q": "Voulez-vous vraiment supprimer ces comptes ?",
+  "account_successfully_deleted": "Compte(s) supprimé(s) avec succès"
 }
