--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -3,7 +3,7 @@
   "account_added": "खाता सफलतापूर्वक जोड़ा गया",
   "account_balance": "खाते में शेष",
   "account_create_new": "एक नया खाता बनाएं",
-  "account_create_new_short": "नया खाता",
+  "account_create_new_short": "खाता बनाएं",
   "account_created": "आपका खाता तैयार कर दिया गया है",
   "account_id": "खाता पहचान",
   "account_import": "मौजूदा खाता आयात करें",
@@ -13,11 +13,11 @@
   "account_watch_short": "खाता देखें",
   "accounts": "हिसाब किताब",
   "actions": "कार्रवाई",
-  "activate": "सक्रिय",
+  "activate": "रक्षा करना",
   "activate_hint": "कृपया पासफ़्रेज़ के शब्दों को सही क्रम में व्यवस्थित करें। ऐसा करने से, आप पुष्टि करते हैं कि आपने पासफ़्रेज़ को सुरक्षित रखा है। ध्यान रखें कि आप पासफ़्रेज़ के बिना अपने खाते को नियंत्रित नहीं कर पाएंगे.",
-  "activate_request_successful": "सक्रियण का सफलतापूर्वक अनुरोध किया गया। आपका खाता कुछ ही क्षणों में सक्रिय हो जाएगा।",
-  "activation_failed": "सक्रियकरण असफल:",
-  "activation_success": "सक्रियण का सफलतापूर्वक अनुरोध किया गया। आपका खाता कुछ ही क्षणों में सक्रिय हो जाएगा।",
+  "activate_request_successful": "सफलतापूर्वक अनुरोधित खाता सुरक्षा। आपका खाता कुछ ही पलों में सुरक्षित हो जाएगा।",
+  "activation_failed": "सुरक्षा विफल:",
+  "activation_success": "सफलतापूर्वक अनुरोधित सुरक्षा। आपका खाता कुछ ही पलों में सुरक्षित हो जाएगा।",
   "add_message_q": "एक संदेश जोड़ें?",
   "add_note_to_self_q": "स्वयं में नोट जोड़ें?",
   "add_recipient": "प्राप्तकर्ता को जोड़ें",
@@ -245,8 +245,8 @@
   "next_block": "अगला ब्लॉक",
   "no": "नहीं न",
   "no_messages_available": "कोई संदेश उपलब्ध नहीं है।",
-  "no_public_key_activate": "यह खाता सुरक्षित नहीं है। अपना खाता सुरक्षित करने के लिए क्लिक करें।",
-  "no_public_key_warning": "चेतावनी!: आपके खाते में सार्वजनिक कुंजी नहीं है! इसका मतलब है कि यह अन्य खातों की तरह सुरक्षित नहीं है। अपनी सार्वजनिक कुंजी प्राप्त करने के लिए कृपया अपना खाता सक्रिय करें।",
+  "no_public_key_activate": "यह खाता सुरक्षित नहीं है। अपने खाते की सुरक्षा के लिए क्लिक करें।",
+  "no_public_key_warning": "चेतावनी! आपके खाते में सार्वजनिक कुंजी नहीं है! इसका मतलब है कि उस खाते में पैसा रखना सुरक्षित नहीं है। कृपया अपनी सार्वजनिक कुंजी प्राप्त करने के लिए अपने खाते को सक्रिय/सुरक्षित करें।",
   "no_transactions_yet": "अभी तक कोई लेनदेन नहीं।",
   "node_hint_no_multiout": "कोई बहु-भुगतान समर्थित नहीं है",
   "node_not_set": "नोड नहीं बदला जा सका. सबसे अधिक संभावना है कि यह उपलब्ध नहीं है।",
@@ -523,5 +523,10 @@
   "account_offline": "केवल देखें",
   "account_safe": "सुरक्षित",
   "account_unsafe": "असुरक्षित!",
-  "error_connection_fail": "एक नोड से कनेक्ट नहीं हो सका। ऐसा लगता है कि यह पहुंच योग्य नहीं है। कृपया कोई और चुनें"
+  "error_connection_fail": "एक नोड से कनेक्ट नहीं हो सका। ऐसा लगता है कि यह पहुंच योग्य नहीं है। कृपया कोई और चुनें",
+  "delete_selected": "चयनित हटाएं",
+  "confirm_delete_accounts": "हटाने की पुष्टि करें",
+  "confirm_delete_accounts_hint": "खातों को केवल इस ऐप्लिकेशन से हटा दिया जाएगा। आपके सभी फंड ब्लॉकचैन पर सुरक्षित रूप से संग्रहीत हैं और आप हमेशा हटाए गए खातों को अपने पासफ़्रेज़ से पुनः आयात कर सकते हैं।",
+  "confirm_delete_accounts_q": "क्या आप वाकई इन खातों को हटाना चाहते हैं?",
+  "account_successfully_deleted": "खाता (खाते) सफलतापूर्वक निकाले गए"
 }
