--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -3,7 +3,7 @@
   "account_added": "Račun je uspješno dodan",
   "account_balance": "Stanje na računu",
   "account_create_new": "Izraditi novi račun",
-  "account_create_new_short": "Novi profil",
+  "account_create_new_short": "Napravi račun",
   "account_created": "Vaš račun je napravljen",
   "account_id": "ID računa",
   "account_import": "Uvezi postojeći račun",
@@ -13,11 +13,11 @@
   "account_watch_short": "Račun sata",
   "accounts": "Računi",
   "actions": "Akcije",
-  "activate": "Aktivirati",
+  "activate": "Zaštititi",
   "activate_hint": "Složite lozinku ispravnim redoslijedom. Na taj način potvrđujete da ste lozinku čuvali na sigurnom. Imajte na umu da svojim računom nećete moći upravljati bez zaporke.",
-  "activate_request_successful": "Uspješno zatražena aktivacija. Vaš će se račun aktivirati za nekoliko trenutaka.",
-  "activation_failed": "Aktivacija nije uspjela:",
-  "activation_success": "Uspješno zatražena aktivacija. Vaš će se račun aktivirati za nekoliko trenutaka.",
+  "activate_request_successful": "Zaštita računa uspješno je zatražena. Vaš će račun biti zaštićen za nekoliko trenutaka.",
+  "activation_failed": "Zaštita nije uspjela:",
+  "activation_success": "Zaštita je uspješno zatražena. Vaš će račun biti zaštićen za nekoliko trenutaka.",
   "add_message_q": "Dodati poruku?",
   "add_note_to_self_q": "Želite li dodati bilješku sebi?",
   "add_recipient": "Dodaj primatelja",
@@ -245,8 +245,8 @@
   "next_block": "Sljedeći blok",
   "no": "Ne",
   "no_messages_available": "Nema dostupnih poruka.",
-  "no_public_key_activate": "Ovaj račun nije siguran. Kliknite kako biste osigurali svoj račun.",
-  "no_public_key_warning": "Upozorenje!: Vaš račun nema javni ključ! To znači da nije zaštićen kao drugi računi. Molimo da aktivirate svoj račun da biste dobili svoj javni ključ.",
+  "no_public_key_activate": "Ovaj račun nije siguran. Kliknite da zaštitite svoj račun.",
+  "no_public_key_warning": "Upozorenje! Vaš račun nema javni ključ! To znači da nije sigurno imati sredstva na tom računu. Molimo aktivirajte/zaštitite svoj račun kako biste dobili svoj javni ključ.",
   "no_transactions_yet": "Još nema transakcija.",
   "node_hint_no_multiout": "Nisu podržana višestruka plaćanja",
   "node_not_set": "Nije moguće promijeniti čvor. Najvjerojatnije nije dostupan.",
@@ -523,5 +523,10 @@
   "account_offline": "Samo za gledanje",
   "account_safe": "Sef",
   "account_unsafe": "nesigurno!",
-  "error_connection_fail": "Nije moguće povezati se s čvorom. Čini se da nije dostupno. Molim vas, izaberite drugu"
+  "error_connection_fail": "Nije moguće povezati se s čvorom. Čini se da nije dostupno. Molim vas, izaberite drugu",
+  "delete_selected": "Ukloni odabrano",
+  "confirm_delete_accounts": "Potvrdite uklanjanje",
+  "confirm_delete_accounts_hint": "Računi će biti uklonjeni samo iz ove aplikacije. Sva vaša sredstva sigurno su pohranjena na blockchainu i uvijek možete ponovno uvesti uklonjene račune sa svojom šifrom.",
+  "confirm_delete_accounts_q": "Jeste li sigurni da želite ukloniti ove račune?",
+  "account_successfully_deleted": "Računi su uspješno uklonjeni"
 }
