--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -3,7 +3,7 @@
   "account_added": "Akun berhasil ditambahkan",
   "account_balance": "Saldo rekening",
   "account_create_new": "Buat akun baru",
-  "account_create_new_short": "Akun baru",
+  "account_create_new_short": "Buat Akun",
   "account_created": "Akun anda telah dibuat",
   "account_id": "ID Akun",
   "account_import": "Impor akun yang ada",
@@ -13,11 +13,11 @@
   "account_watch_short": "Tonton Akun",
   "accounts": "Akun",
   "actions": "tindakan",
-  "activate": "Mengaktifkan",
+  "activate": "Melindungi",
   "activate_hint": "Harap atur kata-kata dari frasa sandi dalam urutan yang benar. Dengan melakukannya, Anda mengonfirmasi bahwa Anda telah menyimpan frasa sandi dengan aman. Ingatlah bahwa Anda tidak akan dapat mengontrol akun Anda tanpa frasa sandi.",
-  "activate_request_successful": "Berhasil meminta aktivasi. Akun Anda akan diaktifkan dalam beberapa saat.",
-  "activation_failed": "Aktivasi gagal:",
-  "activation_success": "Berhasil meminta aktivasi. Akun Anda akan diaktifkan dalam beberapa saat.",
+  "activate_request_successful": "Berhasil meminta perlindungan akun. Akun Anda akan dilindungi dalam beberapa saat.",
+  "activation_failed": "Perlindungan gagal:",
+  "activation_success": "Berhasil meminta perlindungan. Akun Anda akan dilindungi dalam beberapa saat.",
   "add_message_q": "Tambahkan pesan?",
   "add_note_to_self_q": "Tambahkan Catatan ke Diri?",
   "add_recipient": "Tambah penerima",
@@ -245,8 +245,8 @@
   "next_block": "Blok Berikutnya",
   "no": "Tidak",
   "no_messages_available": "Tidak ada pesan yang tersedia.",
-  "no_public_key_activate": "Akun ini tidak aman. Klik untuk mengamankan akun Anda.",
-  "no_public_key_warning": "Peringatan!: Akun Anda tidak memiliki kunci publik! Ini berarti akun tersebut tidak terlindungi seperti akun lainnya. Silakan aktifkan akun Anda untuk mendapatkan kunci publik Anda.",
+  "no_public_key_activate": "Akun ini tidak aman. Klik untuk melindungi akun Anda.",
+  "no_public_key_warning": "Peringatan! Akun Anda tidak memiliki kunci publik! Ini berarti tidak aman memiliki dana di akun itu. Harap aktifkan/lindungi akun Anda untuk mendapatkan kunci publik Anda.",
   "no_transactions_yet": "Belum ada transaksi.",
   "node_hint_no_multiout": "Tidak ada pembayaran multiout yang didukung",
   "node_not_set": "Tidak dapat mengubah simpul. Kemungkinan besar tidak bisa dijangkau.",
@@ -523,5 +523,10 @@
   "account_offline": "Tonton Saja",
   "account_safe": "Aman",
   "account_unsafe": "Tidak aman!",
-  "error_connection_fail": "Tidak dapat terhubung ke node. Sepertinya tidak terjangkau. Silakan, pilih yang lain"
+  "error_connection_fail": "Tidak dapat terhubung ke node. Sepertinya tidak terjangkau. Silakan, pilih yang lain",
+  "delete_selected": "Hapus yang Dipilih",
+  "confirm_delete_accounts": "Konfirmasi Penghapusan",
+  "confirm_delete_accounts_hint": "Akun hanya akan dihapus dari aplikasi ini. Semua dana Anda disimpan dengan aman di blockchain dan Anda selalu dapat mengimpor kembali akun yang dihapus dengan frasa sandi Anda.",
+  "confirm_delete_accounts_q": "Yakin ingin menghapus akun ini?",
+  "account_successfully_deleted": "Akun berhasil dihapus"
 }
