--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -3,7 +3,7 @@
   "account_added": "Account aggiunto con successo",
   "account_balance": "Saldo del conto",
   "account_create_new": "Creare un nuovo account",
-  "account_create_new_short": "Nuovo account",
+  "account_create_new_short": "Crea account",
   "account_created": "Il tuo account è stato creato",
   "account_id": "Account ID",
   "account_import": "Importa account esistente",
@@ -13,11 +13,11 @@
   "account_watch_short": "Guarda il conto",
   "accounts": "Conti",
   "actions": "Azioni",
-  "activate": "Attivare",
+  "activate": "Proteggere",
   "activate_hint": "Si prega di disporre le parole della passphrase nell'ordine corretto. In questo modo, confermi di aver tenuto al sicuro la passphrase. Tieni presente che non sarai in grado di controllare il tuo account senza la passphrase.",
-  "activate_request_successful": "Attivazione richiesta con successo. Il tuo account verrà attivato in pochi istanti.",
-  "activation_failed": "Attivazione fallita:",
-  "activation_success": "Attivazione richiesta con successo. Il tuo account verrà attivato in pochi istanti.",
+  "activate_request_successful": "Protezione dell'account richiesta con successo. Il tuo account sarà protetto in pochi istanti.",
+  "activation_failed": "Protezione fallita:",
+  "activation_success": "Protezione richiesta con successo. Il tuo account sarà protetto in pochi istanti.",
   "add_message_q": "Aggiungi un messaggio?",
   "add_note_to_self_q": "Aggiungere nota a se stessi?",
   "add_recipient": "Aggiungere il destinatario",
@@ -246,7 +246,7 @@
   "no": "No",
   "no_messages_available": "Nessun messaggio disponibile.",
   "no_public_key_activate": "Questo account non è sicuro. Fai clic per proteggere il tuo account.",
-  "no_public_key_warning": "Attenzione!: Il tuo account non ha una chiave pubblica! Ciò significa che non è protetto come altri account. Attiva il tuo account per ottenere la tua chiave pubblica.",
+  "no_public_key_warning": "Avvertimento! Il tuo account non ha una chiave pubblica! Ciò significa che non è sicuro avere fondi su quel conto. Attiva/proteggi il tuo account per ottenere la tua chiave pubblica.",
   "no_transactions_yet": "Nessuna transazione ancora.",
   "node_hint_no_multiout": "Nessun pagamento multiout supportato",
   "node_not_set": "Impossibile cambiare nodo. Molto probabilmente non è raggiungibile.",
@@ -523,5 +523,10 @@
   "account_offline": "Guarda solo",
   "account_safe": "Sicuro",
   "account_unsafe": "Non sicuro!",
-  "error_connection_fail": "Impossibile connettersi a un nodo. Sembra che non sia raggiungibile. Per favore, scegline un altro"
+  "error_connection_fail": "Impossibile connettersi a un nodo. Sembra che non sia raggiungibile. Per favore, scegline un altro",
+  "delete_selected": "Rimuovi i selezionati",
+  "confirm_delete_accounts": "Conferma rimozione",
+  "confirm_delete_accounts_hint": "Gli account verranno rimossi solo da questa applicazione. Tutti i tuoi fondi sono archiviati in modo sicuro sulla blockchain e puoi sempre reimportare gli account rimossi con la tua passphrase.",
+  "confirm_delete_accounts_q": "Sei sicuro di voler rimuovere questi account?",
+  "account_successfully_deleted": "Account rimossi con successo"
 }
