--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -3,7 +3,7 @@
   "account_added": "アカウントが正常に追加されました",
   "account_balance": "勘定残高",
   "account_create_new": "新しいアカウントを作成する",
-  "account_create_new_short": "新しいアカウント",
+  "account_create_new_short": "アカウントを作成する",
   "account_created": "あなたのアカウントが作成されました",
   "account_id": "アカウントID",
   "account_import": "既存のアカウントをインポート",
@@ -13,11 +13,11 @@
   "account_watch_short": "ウォッチアカウント",
   "accounts": "アカウント",
   "actions": "行動",
-  "activate": "アクティベート",
+  "activate": "守る",
   "activate_hint": "パスフレーズの単語を正しい順序で並べてください。これにより、パスフレーズを安全に保管したことを確認できます。パスフレーズがないとアカウントを制御できないことに注意してください。",
-  "activate_request_successful": "アクティベーションをリクエストしました。アカウントはすぐに有効になります。",
-  "activation_failed": "アクティベーションに失敗しました:",
-  "activation_success": "アクティベーションをリクエストしました。アカウントはすぐに有効になります。",
+  "activate_request_successful": "アカウント保護をリクエストしました。あなたのアカウントはしばらくすると保護されます。",
+  "activation_failed": "保護に失敗しました:",
+  "activation_success": "保護を正常に要求しました。あなたのアカウントはしばらくすると保護されます。",
   "add_message_q": "メッセージを追加？",
   "add_note_to_self_q": "自分にメモを追加しますか?",
   "add_recipient": "受信者を追加する",
@@ -246,7 +246,7 @@
   "no": "番号",
   "no_messages_available": "メッセージはありません。",
   "no_public_key_activate": "このアカウントは安全ではありません。クリックしてアカウントを保護します。",
-  "no_public_key_warning": "警告!: あなたのアカウントには公開鍵がありません!これは、他のアカウントほど保護されていないことを意味します。アカウントをアクティベートして公開鍵を取得してください。",
+  "no_public_key_warning": "警告！あなたのアカウントには公開鍵がありません!これは、その口座に資金を預けるのは安全ではないことを意味します。公開鍵を取得するには、アカウントをアクティブ化/保護してください。",
   "no_transactions_yet": "まだ取引はありません。",
   "node_hint_no_multiout": "マルチアウト支払いはサポートされていません",
   "node_not_set": "ノードを変更できませんでした。到達できない可能性が高いです。",
@@ -523,5 +523,10 @@
   "account_offline": "見るだけ",
   "account_safe": "安全",
   "account_unsafe": "安全ではありません！",
-  "error_connection_fail": "ノードに接続できませんでした。届かないようです。別のものを選択してください"
+  "error_connection_fail": "ノードに接続できませんでした。届かないようです。別のものを選択してください",
+  "delete_selected": "削除選択",
+  "confirm_delete_accounts": "削除の確認",
+  "confirm_delete_accounts_hint": "アカウントは、このアプリケーションからのみ削除されます。すべての資金はブロックチェーンに安全に保存され、パスフレーズを使用して削除されたアカウントをいつでも再インポートできます。",
+  "confirm_delete_accounts_q": "これらのアカウントを削除してもよろしいですか?",
+  "account_successfully_deleted": "アカウントが正常に削除されました"
 }
