--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -3,7 +3,7 @@
   "account_added": "Account succesvol toegevoegd",
   "account_balance": "Accountsaldo",
   "account_create_new": "Maak een nieuw account aan",
-  "account_create_new_short": "Nieuw account",
+  "account_create_new_short": "Maak account",
   "account_created": "Je account is aangemaakt",
   "account_id": "Account ID",
   "account_import": "Bestaand account importeren",
@@ -13,11 +13,11 @@
   "account_watch_short": "Bekijk account",
   "accounts": "rekeningen",
   "actions": "Acties",
-  "activate": "Activeren",
+  "activate": "Beschermen",
   "activate_hint": "Zet de woorden van de wachtwoordzin in de juiste volgorde. Door dit te doen, bevestigt u dat u de wachtwoordzin veilig hebt bewaard. Houd er rekening mee dat u uw account niet kunt beheren zonder de wachtwoordzin.",
-  "activate_request_successful": "Activering aangevraagd. Uw account wordt binnen enkele ogenblikken geactiveerd.",
-  "activation_failed": "Activatie mislukt:",
-  "activation_success": "Activering aangevraagd. Uw account wordt binnen enkele ogenblikken geactiveerd.",
+  "activate_request_successful": "Accountbescherming aangevraagd. Uw account wordt binnen enkele ogenblikken beschermd.",
+  "activation_failed": "Beveiliging mislukt:",
+  "activation_success": "Bescherming aangevraagd. Uw account wordt binnen enkele ogenblikken beschermd.",
   "add_message_q": "Voeg een bericht toe?",
   "add_note_to_self_q": "Notitie aan mezelf toevoegen?",
   "add_recipient": "Voeg ontvanger toe",
@@ -245,8 +245,8 @@
   "next_block": "Volgende blok",
   "no": "Nee",
   "no_messages_available": "Geen berichten beschikbaar.",
-  "no_public_key_activate": "Dit account is niet veilig. Klik om uw account te beveiligen.",
-  "no_public_key_warning": "Waarschuwing!: Uw account heeft geen openbare sleutel! Dit betekent dat het niet zo beschermd is als andere accounts. Activeer uw account om uw openbare sleutel te verkrijgen.",
+  "no_public_key_activate": "Dit account is niet veilig. Klik om je account te beschermen.",
+  "no_public_key_warning": "Waarschuwing! Uw account heeft geen openbare sleutel! Dit betekent dat het niet veilig is om geld op die rekening te hebben staan. Activeer/beveilig uw account om uw openbare sleutel te verkrijgen.",
   "no_transactions_yet": "Nog geen transacties.",
   "node_hint_no_multiout": "Geen multi-out betalingen ondersteund",
   "node_not_set": "Kan het knooppunt niet wijzigen. Hoogstwaarschijnlijk is het niet bereikbaar.",
@@ -523,5 +523,10 @@
   "account_offline": "Alleen kijken",
   "account_safe": "Veilig",
   "account_unsafe": "Onveilig!",
-  "error_connection_fail": "Kan geen verbinding maken met een knooppunt. Het lijkt erop dat het niet bereikbaar is. Kies alstublieft een andere"
+  "error_connection_fail": "Kan geen verbinding maken met een knooppunt. Het lijkt erop dat het niet bereikbaar is. Kies alstublieft een andere",
+  "delete_selected": "Verwijder geselecteerde",
+  "confirm_delete_accounts": "Bevestig verwijdering",
+  "confirm_delete_accounts_hint": "De accounts worden alleen uit deze applicatie verwijderd. Al uw geld wordt veilig opgeslagen op de blockchain en u kunt verwijderde accounts altijd opnieuw importeren met uw wachtwoordzin.",
+  "confirm_delete_accounts_q": "Weet u zeker dat u deze accounts wilt verwijderen?",
+  "account_successfully_deleted": "Account(s) succesvol verwijderd"
 }
