--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -3,7 +3,7 @@
   "account_added": "Konto zostało pomyślnie dodane",
   "account_balance": "Bilans konta",
   "account_create_new": "Stwórz nowe konto",
-  "account_create_new_short": "Nowe konto",
+  "account_create_new_short": "Utwórz konto",
   "account_created": "Twoje konto zostało utworzone",
   "account_id": "ID konta",
   "account_import": "Importuj istniejące konto",
@@ -13,11 +13,11 @@
   "account_watch_short": "Oglądaj konto",
   "accounts": "Konta",
   "actions": "działania",
-  "activate": "Aktywuj",
+  "activate": "Chronić",
   "activate_hint": "Proszę ułożyć słowa hasła we właściwej kolejności. W ten sposób potwierdzasz, że zachowałeś hasło w bezpiecznym miejscu. Pamiętaj, że bez hasła nie będziesz w stanie kontrolować swojego konta.",
-  "activate_request_successful": "Pomyślnie zażądano aktywacji. Twoje konto zostanie aktywowane za kilka chwil.",
-  "activation_failed": "Aktywacja nie powiodła się:",
-  "activation_success": "Pomyślnie zażądano aktywacji. Twoje konto zostanie aktywowane za kilka chwil.",
+  "activate_request_successful": "Pomyślnie zażądano ochrony konta. Twoje konto będzie chronione za kilka chwil.",
+  "activation_failed": "Ochrona nie powiodła się:",
+  "activation_success": "Pomyślnie zażądano ochrony. Twoje konto będzie chronione za kilka chwil.",
   "add_message_q": "Dodaj wiadomość?",
   "add_note_to_self_q": "Dodać notatkę do siebie?",
   "add_recipient": "Dodaj odbiorcę",
@@ -245,8 +245,8 @@
   "next_block": "Następny blok",
   "no": "Nie",
   "no_messages_available": "Brak dostępnych wiadomości.",
-  "no_public_key_activate": "To konto nie jest bezpieczne. Kliknij, aby zabezpieczyć swoje konto.",
-  "no_public_key_warning": "Uwaga!: Twoje konto nie ma klucza publicznego! Oznacza to, że nie jest tak chroniony, jak inne konta. Aktywuj swoje konto, aby uzyskać klucz publiczny.",
+  "no_public_key_activate": "To konto nie jest bezpieczne. Kliknij, aby chronić swoje konto.",
+  "no_public_key_warning": "Ostrzeżenie! Twoje konto nie ma klucza publicznego! Oznacza to, że posiadanie środków na tym koncie nie jest bezpieczne. Aktywuj/chroń swoje konto, aby uzyskać klucz publiczny.",
   "no_transactions_yet": "Brak transakcji.",
   "node_hint_no_multiout": "Brak obsługi płatności wielorazowych",
   "node_not_set": "Nie udało się zmienić węzła. Najprawdopodobniej nie jest osiągalny.",
@@ -523,5 +523,10 @@
   "account_offline": "Oglądaj tylko",
   "account_safe": "Bezpieczna",
   "account_unsafe": "Niebezpieczny!",
-  "error_connection_fail": "Nie można połączyć się z węzłem. Wydaje się, że jest nieosiągalny. Proszę wybrać inny"
+  "error_connection_fail": "Nie można połączyć się z węzłem. Wydaje się, że jest nieosiągalny. Proszę wybrać inny",
+  "delete_selected": "Usuń wybrane",
+  "confirm_delete_accounts": "Potwierdź usunięcie",
+  "confirm_delete_accounts_hint": "Konta zostaną usunięte tylko z tej aplikacji. Wszystkie Twoje środki są bezpiecznie przechowywane w łańcuchu bloków i zawsze możesz ponownie zaimportować usunięte konta za pomocą hasła.",
+  "confirm_delete_accounts_q": "Czy na pewno chcesz usunąć te konta?",
+  "account_successfully_deleted": "Konta zostały pomyślnie usunięte"
 }
