--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -3,7 +3,7 @@
   "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da conta",
   "account_create_new": "Criar uma nova conta",
-  "account_create_new_short": "Nova conta",
+  "account_create_new_short": "Criar conta",
   "account_created": "Sua conta foi criada",
   "account_id": "ID da conta",
   "account_import": "Importar conta existente",
@@ -13,11 +13,11 @@
   "account_watch_short": "Observar Conta",
   "accounts": "Contas",
   "actions": "Ações",
-  "activate": "Ativar",
+  "activate": "Proteger",
   "activate_hint": "Organize as palavras da frase secreta na ordem correta. Ao fazer isso, você confirma que manteve a frase secreta segura. Lembre-se de que você não poderá controlar sua conta sem a frase secreta.",
-  "activate_request_successful": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
-  "activation_failed": "Ativação falhou:",
-  "activation_success": "Ativação solicitada com sucesso. Sua conta será ativada em alguns instantes.",
+  "activate_request_successful": "Proteção de conta solicitada com sucesso. Sua conta será protegida em alguns instantes.",
+  "activation_failed": "Falha na proteção:",
+  "activation_success": "Proteção solicitada com sucesso. Sua conta será protegida em alguns instantes.",
   "add_message_q": "Adicionar uma mensagem?",
   "add_note_to_self_q": "Adicionar nota a mim mesmo?",
   "add_recipient": "Adicionar Destinatário",
@@ -246,7 +246,7 @@
   "no": "Não",
   "no_messages_available": "Nenhuma mensagem disponível.",
   "no_public_key_activate": "Esta conta não é segura. Clique para proteger sua conta.",
-  "no_public_key_warning": "Aviso !: Sua conta não tem uma chave pública! Isso significa que não é tão protegido quanto outras contas. Por favor, ative sua conta para obter sua chave pública.",
+  "no_public_key_warning": "Aviso! Sua conta não possui uma chave pública! Isso significa que não é seguro ter fundos nessa conta. Ative/proteja sua conta para obter sua chave pública.",
   "no_transactions_yet": "Ainda não há transações.",
   "node_hint_no_multiout": "Não há suporte para pagamentos multiponto",
   "node_not_set": "Não foi possível alterar o nó. O mais provável é que não seja alcançável.",
@@ -426,7 +426,7 @@
   "invalid_address": "Endereço inválido",
   "unknown_address": "Endereço Desconhecido",
   "success_transaction_executed": "Transação executada com sucesso",
-  "no_tokens_available": "Nenhum tokens disponível",
+  "no_tokens_available": "Nenhum token disponível",
   "trade_tokens_with": "Negocie tokens com",
   "simple": "Simples",
   "trader": "Trader",
@@ -523,5 +523,10 @@
   "account_offline": "Assistir apenas",
   "account_safe": "Seguro",
   "account_unsafe": "Inseguro!",
-  "error_connection_fail": "Não foi possível conectar a um nó. Parece que não está acessível. Por favor escolha um outro"
+  "error_connection_fail": "Não foi possível conectar a um nó. Parece que não está acessível. Por favor escolha um outro",
+  "delete_selected": "Remover selecionados",
+  "confirm_delete_accounts": "Confirmar remoção",
+  "confirm_delete_accounts_hint": "As contas serão removidas apenas deste aplicativo. Todos os seus fundos são armazenados com segurança no blockchain e você sempre pode reimportar contas removidas com sua senha.",
+  "confirm_delete_accounts_q": "Tem certeza de que deseja remover essas contas?",
+  "account_successfully_deleted": "Conta(s) removida(s) com sucesso"
 }
