--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -3,7 +3,7 @@
   "account_added": "Contul a fost adăugat cu succes",
   "account_balance": "Balanța contului",
   "account_create_new": "Creați un cont nou",
-  "account_create_new_short": "Cont nou",
+  "account_create_new_short": "Creează cont",
   "account_created": "Contul dvs. a fost creat",
   "account_id": "Cont ID",
   "account_import": "Importați contul existent",
@@ -13,11 +13,11 @@
   "account_watch_short": "Urmăriți contul",
   "accounts": "Conturi",
   "actions": "Acțiuni",
-  "activate": "Activati",
+  "activate": "Proteja",
   "activate_hint": "Vă rugăm să aranjați cuvintele expresiei de acces în ordinea corectă. Procedând astfel, confirmați că ați păstrat fraza de acces în siguranță. Rețineți că nu vă veți putea controla contul fără expresia de acces.",
-  "activate_request_successful": "Activare solicitată cu succes. Contul dvs. va fi activat în câteva momente.",
-  "activation_failed": "Activarea a eșuat:",
-  "activation_success": "Activare solicitată cu succes. Contul dvs. va fi activat în câteva momente.",
+  "activate_request_successful": "Protecția contului a fost solicitată. Contul dvs. va fi protejat în câteva momente.",
+  "activation_failed": "Protecția a eșuat:",
+  "activation_success": "Protecție solicitată cu succes. Contul dvs. va fi protejat în câteva momente.",
   "add_message_q": "Adauga un mesaj?",
   "add_note_to_self_q": "Adăugați o notă la sine?",
   "add_recipient": "Adauga recipient",
@@ -245,8 +245,8 @@
   "next_block": "Următorul bloc",
   "no": "Nu",
   "no_messages_available": "Nu sunt mesaje disponibile.",
-  "no_public_key_activate": "Acest cont nu este sigur. Faceți clic pentru a vă securiza contul.",
-  "no_public_key_warning": "Atenție !: Contul dvs. nu are o cheie publică! Aceasta înseamnă că nu este la fel de protejat ca alte conturi. Vă rugăm să vă activați contul pentru a obține cheia dvs. publică.",
+  "no_public_key_activate": "Acest cont nu este sigur. Faceți clic pentru a vă proteja contul.",
+  "no_public_key_warning": "Avertizare! Contul dvs. nu are o cheie publică! Aceasta înseamnă că nu este sigur să aveți fonduri în acel cont. Vă rugăm să vă activați/protejați contul pentru a obține cheia publică.",
   "no_transactions_yet": "Nici o tranzacție încă.",
   "node_hint_no_multiout": "Nu sunt acceptate plăți multiple",
   "node_not_set": "Nu s-a putut schimba nodul. Cel mai probabil nu este accesibil.",
@@ -523,5 +523,10 @@
   "account_offline": "Numai ceas",
   "account_safe": "Sigur",
   "account_unsafe": "Nesigur!",
-  "error_connection_fail": "Nu s-a putut conecta la un nod. Se pare că nu este accesibil. Vă rog, alegeți altul"
+  "error_connection_fail": "Nu s-a putut conecta la un nod. Se pare că nu este accesibil. Vă rog, alegeți altul",
+  "delete_selected": "Sterge selectia",
+  "confirm_delete_accounts": "Confirmați eliminarea",
+  "confirm_delete_accounts_hint": "Conturile vor fi eliminate numai din această aplicație. Toate fondurile dvs. sunt stocate în siguranță pe blockchain și puteți oricând să reimportați conturile eliminate cu expresia dvs. de acces.",
+  "confirm_delete_accounts_q": "Sigur doriți să eliminați aceste conturi?",
+  "account_successfully_deleted": "Conturile au fost eliminate cu succes"
 }
