--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -3,7 +3,7 @@
   "account_added": "Аккаунт успешно добавлен",
   "account_balance": "Остаток на счету",
   "account_create_new": "Создать новый аккаунт",
-  "account_create_new_short": "Новый аккаунт",
+  "account_create_new_short": "Зарегистрироваться",
   "account_created": "Ваш аккаунт был создан",
   "account_id": "ID аккаунта",
   "account_import": "Импортировать существующий аккаунт",
@@ -13,11 +13,11 @@
   "account_watch_short": "Наблюдать за аккаунтом",
   "accounts": "Учетные записи",
   "actions": "Действия",
-  "activate": "Активация",
+  "activate": "Защищать",
   "activate_hint": "Пожалуйста, расположите слова секретной фразы в правильном порядке. Этим вы подтверждаете, что сохранили кодовую фразу. Имейте в виду, что без кодовой фразы вы не сможете управлять своим счетом",
-  "activate_request_successful": "Активация прошла успешно. Ваш аккаунт будет активирован через несколько секунд.",
-  "activation_failed": "Активация не удалось:",
-  "activation_success": "Активация прошла успешно. Ваш аккаунт будет активирован через несколько секунд.",
+  "activate_request_successful": "Успешно запрошена защита аккаунта. Ваша учетная запись будет защищена через несколько минут.",
+  "activation_failed": "Защита не удалась:",
+  "activation_success": "Успешно запрошена защита. Ваша учетная запись будет защищена через несколько минут.",
   "add_message_q": "Добавить сообщение?",
   "add_note_to_self_q": "Добавить себе заметку?",
   "add_recipient": "Добавить получателя",
@@ -246,7 +246,7 @@
   "no": "Нет",
   "no_messages_available": "Нет доступных сообщений.",
   "no_public_key_activate": "Этот аккаунт небезопасен. Нажмите, чтобы защитить свою учетную запись.",
-  "no_public_key_warning": "Внимание! У вашей учетной записи нет публичного ключа! Это означает, что он не так защищен, как другие аккаунты. Пожалуйста, активируйте свою учетную запись, чтобы получить публичный ключ.",
+  "no_public_key_warning": "Предупреждение! У вашей учетной записи нет открытого ключа! Это означает, что хранить средства на этом счете небезопасно. Активируйте/защитите свою учетную запись, чтобы получить открытый ключ.",
   "no_transactions_yet": "Транзакций пока нет.",
   "node_hint_no_multiout": "Мульти платежи не поддерживаются",
   "node_not_set": "Не удалось изменить узел. Скорее всего, он недоступен.",
@@ -523,5 +523,10 @@
   "account_offline": "Только смотреть",
   "account_safe": "Безопасно",
   "account_unsafe": "Небезопасно!",
-  "error_connection_fail": "Не удалось подключиться к узлу. Кажется, что это недоступно. Пожалуйста, выберите другой"
+  "error_connection_fail": "Не удалось подключиться к узлу. Кажется, что это недоступно. Пожалуйста, выберите другой",
+  "delete_selected": "Удалить выбранное",
+  "confirm_delete_accounts": "Подтвердить удаление",
+  "confirm_delete_accounts_hint": "Учетные записи будут удалены только из этого приложения. Все ваши средства надежно хранятся в блокчейне, и вы всегда можете повторно импортировать удаленные учетные записи со своей кодовой фразой.",
+  "confirm_delete_accounts_q": "Вы уверены, что хотите удалить эти аккаунты?",
+  "account_successfully_deleted": "Аккаунты успешно удалены"
 }
