--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -3,7 +3,7 @@
   "account_added": "Účet bol úspešne pridaný",
   "account_balance": "Zostatok na účte",
   "account_create_new": "Vytvorte nový účet",
-  "account_create_new_short": "Nový účet",
+  "account_create_new_short": "Vytvoriť účet",
   "account_created": "Váš účet bol vytvorený",
   "account_id": "Číslo účtu",
   "account_import": "Importujte existujúci účet",
@@ -13,11 +13,11 @@
   "account_watch_short": "Sledujte účet",
   "accounts": "Účty",
   "actions": "Akcie",
-  "activate": "Aktivovať",
+  "activate": "Chrániť",
   "activate_hint": "Zostavte slová prístupovej frázy v správnom poradí. Týmto potvrdzujete, že ste chránili prístupovú frázu. Nezabudnite, že bez prístupovej frázy nebudete môcť ovládať svoj účet.",
-  "activate_request_successful": "Úspešne požiadaná o aktiváciu. Váš účet sa aktivuje o chvíľu.",
-  "activation_failed": "Aktivácia zlyhala:",
-  "activation_success": "Úspešne požiadaná o aktiváciu. Váš účet sa aktivuje o chvíľu.",
+  "activate_request_successful": "Úspešne vyžiadaná ochrana účtu. Váš účet bude o chvíľu chránený.",
+  "activation_failed": "Ochrana zlyhala:",
+  "activation_success": "Úspešne vyžiadaná ochrana. Váš účet bude o chvíľu chránený.",
   "add_message_q": "Pridať správu?",
   "add_note_to_self_q": "Pridať poznámku k sebe?",
   "add_recipient": "Pridať príjemcu",
@@ -245,8 +245,8 @@
   "next_block": "Ďalší blok",
   "no": "Nie",
   "no_messages_available": "Nie sú k dispozícii žiadne správy.",
-  "no_public_key_activate": "Tento účet nie je bezpečný. Kliknutím zabezpečíte svoj účet.",
-  "no_public_key_warning": "Varovanie !: Váš účet nemá verejný kľúč! To znamená, že nie je tak chránený ako iné účty. Aktivujte si účet, aby ste získali svoj verejný kľúč.",
+  "no_public_key_activate": "Tento účet nie je bezpečný. Kliknutím ochránite svoj účet.",
+  "no_public_key_warning": "POZOR! Váš účet nemá verejný kľúč! To znamená, že nie je bezpečné mať prostriedky na tomto účte. Ak chcete získať svoj verejný kľúč, aktivujte/ochráňte svoj účet.",
   "no_transactions_yet": "Zatiaľ žiadne transakcie.",
   "node_hint_no_multiout": "Nie sú podporované žiadne platby multiout",
   "node_not_set": "Uzol sa nepodarilo zmeniť. S najväčšou pravdepodobnosťou nie je dosiahnuteľná.",
@@ -523,5 +523,10 @@
   "account_offline": "Iba pozerať",
   "account_safe": "Bezpečný",
   "account_unsafe": "Nebezpečné!",
-  "error_connection_fail": "Nepodarilo sa pripojiť k uzlu. Zdá sa, že to nie je dosiahnuteľné. Prosím, vyberte si iný"
+  "error_connection_fail": "Nepodarilo sa pripojiť k uzlu. Zdá sa, že to nie je dosiahnuteľné. Prosím, vyberte si iný",
+  "delete_selected": "Vymazať označené",
+  "confirm_delete_accounts": "Potvrďte odstránenie",
+  "confirm_delete_accounts_hint": "Účty budú odstránené iba z tejto aplikácie. Všetky vaše prostriedky sú bezpečne uložené na blockchaine a vždy môžete znova importovať odstránené účty pomocou vašej prístupovej frázy.",
+  "confirm_delete_accounts_q": "Naozaj chcete odstrániť tieto účty?",
+  "account_successfully_deleted": "Účty boli úspešne odstránené"
 }
