--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -3,7 +3,7 @@
   "account_added": "Налог је успешно додат",
   "account_balance": "Стање на рачуну",
   "account_create_new": "Направи нови налог",
-  "account_create_new_short": "Нови налог",
+  "account_create_new_short": "Региструј се",
   "account_created": "Ваш налог је направљен",
   "account_id": "ИД налога",
   "account_import": "Увези постојећи рачун",
@@ -13,11 +13,11 @@
   "account_watch_short": "Ватцх Аццоунт",
   "accounts": "Рачуни",
   "actions": "Акције",
-  "activate": "Активирати",
+  "activate": "Заштити",
   "activate_hint": "Сложите приступну фразу у правилном редоследу. Тиме потврђујете да сте лозинку чували на сигурном. Имајте на уму да нећете моћи да контролишете свој налог без приступне фразе.",
-  "activate_request_successful": "Успешно затражена активација. Ваш рачун ће бити активиран за неколико тренутака.",
-  "activation_failed": "Активација није успела:",
-  "activation_success": "Успешно затражена активација. Ваш рачун ће бити активиран за неколико тренутака.",
+  "activate_request_successful": "Успешно је захтевана заштита налога. Ваш налог ће бити заштићен за неколико тренутака.",
+  "activation_failed": "Заштита није успела:",
+  "activation_success": "Успешно затражена заштита. Ваш налог ће бити заштићен за неколико тренутака.",
   "add_message_q": "Додајте поруку?",
   "add_note_to_self_q": "Желите ли додати белешку себи?",
   "add_recipient": "Додај примаоца",
@@ -246,7 +246,7 @@
   "no": "Не",
   "no_messages_available": "Нема доступних порука.",
   "no_public_key_activate": "Овај налог није безбедан. Кликните да бисте заштитили свој налог.",
-  "no_public_key_warning": "Упозорење!: Ваш налог нема јавни кључ! То значи да није толико заштићен као други налози. Молимо вас да активирате свој рачун да бисте добили свој јавни кључ.",
+  "no_public_key_warning": "Упозорење! Ваш налог нема јавни кључ! То значи да није безбедно имати средства на том рачуну. Активирајте/заштитите свој налог да бисте добили свој јавни кључ.",
   "no_transactions_yet": "Још нема трансакција.",
   "node_hint_no_multiout": "Нису подржана вишеструка плаћања",
   "node_not_set": "Није могуће променити чвор. Највероватније није доступан.",
@@ -523,5 +523,10 @@
   "account_offline": "Ватцх Онли",
   "account_safe": "Сафе",
   "account_unsafe": "Небезбедно!",
-  "error_connection_fail": "Повезивање са чвором није успело. Чини се да није доступно. Молим вас, изаберите другу"
+  "error_connection_fail": "Повезивање са чвором није успело. Чини се да није доступно. Молим вас, изаберите другу",
+  "delete_selected": "Одстрани изабрано",
+  "confirm_delete_accounts": "Потврдите уклањање",
+  "confirm_delete_accounts_hint": "Налози ће бити уклоњени само из ове апликације. Сва ваша средства су безбедно ускладиштена на блокчејну и увек можете поново да увезете уклоњене налоге са својом приступном фразом.",
+  "confirm_delete_accounts_q": "Да ли сте сигурни да желите да уклоните ове налоге?",
+  "account_successfully_deleted": "Налози су успешно уклоњени"
 }
