--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -3,7 +3,7 @@
   "account_added": "Обліковий запис успішно додано",
   "account_balance": "Баланс",
   "account_create_new": "Створити новий акаунт",
-  "account_create_new_short": "Новий акаунт",
+  "account_create_new_short": "Створити акаунт",
   "account_created": "Ваш обліковий запис створено",
   "account_id": "Номер рахунку",
   "account_import": "Імпортувати наявний рахунок",
@@ -13,11 +13,11 @@
   "account_watch_short": "Обліковий запис годинника",
   "accounts": "Рахунки",
   "actions": "Дії",
-  "activate": "Активувати",
+  "activate": "Захищати",
   "activate_hint": "Будь ласка, розташуйте слова парольної фрази у правильному порядку. Роблячи це, ви підтверджуєте, що захищали парольну фразу. Майте на увазі, що ви не зможете керувати своїм обліковим записом без парольної фрази.",
-  "activate_request_successful": "Успішно надіслано запит на активацію. Ваш рахунок буде активовано через кілька хвилин.",
-  "activation_failed": "Помилка активації:",
-  "activation_success": "Успішно надіслано запит на активацію. Ваш рахунок буде активовано через кілька хвилин.",
+  "activate_request_successful": "Успішно надіслано запит на захист облікового запису. Ваш обліковий запис буде захищено через кілька хвилин.",
+  "activation_failed": "Помилка захисту:",
+  "activation_success": "Успішно надіслано запит на захист. Ваш обліковий запис буде захищено через кілька хвилин.",
   "add_message_q": "Додати повідомлення?",
   "add_note_to_self_q": "Додати примітку до себе?",
   "add_recipient": "Додати одержувача",
@@ -246,7 +246,7 @@
   "no": "Немає",
   "no_messages_available": "Повідомлень немає.",
   "no_public_key_activate": "Цей обліковий запис небезпечний. Натисніть, щоб захистити свій обліковий запис.",
-  "no_public_key_warning": "Увага: Ваш акаунт не має відкритого ключа! Це означає, що він не настільки захищений, як інші облікові записи. Будь ласка, активуйте свій рахунок, щоб отримати свій відкритий ключ.",
+  "no_public_key_warning": "УВАГА! Ваш обліковий запис не має відкритого ключа! Це означає, що мати кошти на цьому рахунку небезпечно. Будь ласка, активуйте/захистіть свій обліковий запис, щоб отримати відкритий ключ.",
   "no_transactions_yet": "Поки що транзакцій немає.",
   "node_hint_no_multiout": "Не підтримуються багатоплатові платежі",
   "node_not_set": "Не вдалося змінити вузол. Найімовірніше, це недосяжно.",
@@ -523,5 +523,10 @@
   "account_offline": "Дивитися тільки",
   "account_safe": "Сейф",
   "account_unsafe": "Небезпечно!",
-  "error_connection_fail": "Не вдалося підключитися до вузла. Здається, що це недоступно. Будь ласка, виберіть інший"
+  "error_connection_fail": "Не вдалося підключитися до вузла. Здається, що це недоступно. Будь ласка, виберіть інший",
+  "delete_selected": "Видалити вибране",
+  "confirm_delete_accounts": "Підтвердити видалення",
+  "confirm_delete_accounts_hint": "Облікові записи буде видалено лише з цієї програми. Усі ваші кошти надійно зберігаються в блокчейні, і ви завжди можете повторно імпортувати видалені облікові записи за допомогою своєї парольної фрази.",
+  "confirm_delete_accounts_q": "Ви впевнені, що хочете видалити ці облікові записи?",
+  "account_successfully_deleted": "Обліковий запис(и) успішно видалено"
 }
