--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -3,7 +3,7 @@
   "account_added": "账号添加成功",
   "account_balance": "账户余额",
   "account_create_new": "创建一个新账户",
-  "account_create_new_short": "新账户",
+  "account_create_new_short": "创建账户",
   "account_created": "您的帐号已经建立",
   "account_id": "帐户ID",
   "account_import": "导入现有帐户",
@@ -13,11 +13,11 @@
   "account_watch_short": "手表账户",
   "accounts": "帐户",
   "actions": "行动",
-  "activate": "启用",
+  "activate": "保护",
   "activate_hint": "请按正确的顺序排列密码的单词。通过这样做，您确认您已确保密码安全。请记住，如果没有密码，您将无法控制您的帐户。",
-  "activate_request_successful": "已成功请求激活。您的帐户将在几分钟后激活。",
-  "activation_failed": "激活失败：",
-  "activation_success": "已成功请求激活。您的帐户将在几分钟后激活。",
+  "activate_request_successful": "成功请求帐户保护。您的帐户很快就会受到保护。",
+  "activation_failed": "保护失败：",
+  "activation_success": "成功请求保护。您的帐户很快就会受到保护。",
   "add_message_q": "添加消息？",
   "add_note_to_self_q": "给自己添加注释？",
   "add_recipient": "添加收件人",
@@ -246,7 +246,7 @@
   "no": "不",
   "no_messages_available": "没有可用的消息。",
   "no_public_key_activate": "此帐户不安全。单击以保护您的帐户。",
-  "no_public_key_warning": "警告！：您的帐户没有公钥！这意味着它不像其他帐户那样受到保护。请激活您的帐户以获取您的公钥。",
+  "no_public_key_warning": "警告！您的帐户没有公钥！这意味着在该帐户中存入资金是不安全的。请激活/保护您的帐户以获取您的公钥。",
   "no_transactions_yet": "还没有交易。",
   "node_hint_no_multiout": "不支持多出付款",
   "node_not_set": "无法更改节点。很可能它无法访问。",
@@ -523,5 +523,10 @@
   "account_offline": "只看",
   "account_safe": "安全的",
   "account_unsafe": "不安全！",
-  "error_connection_fail": "无法连接到节点。似乎无法到达。请选择另一个"
+  "error_connection_fail": "无法连接到节点。似乎无法到达。请选择另一个",
+  "delete_selected": "删除选定",
+  "confirm_delete_accounts": "确认移除",
+  "confirm_delete_accounts_hint": "这些帐户只会从此应用程序中删除。您的所有资金都安全地存储在区块链上，您可以随时使用密码重新导入已删除的帐户。",
+  "confirm_delete_accounts_q": "您确定要删除这些帐户吗？",
+  "account_successfully_deleted": "帐户已成功删除"
 }
