--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -3,7 +3,7 @@
   "account_added": "Tilin lisääminen onnistui",
   "account_balance": "Tilin saldo",
   "account_create_new": "Luo uusi tili",
-  "account_create_new_short": "Uusi tili",
+  "account_create_new_short": "Luo tili",
   "account_created": "Sinun tilisi on luotu",
   "account_id": "Tilin tunnus",
   "account_import": "Tuo olemassa oleva tili",
@@ -13,11 +13,11 @@
   "account_watch_short": "Watch-tili",
   "accounts": "Tilit",
   "actions": "Toiminnot",
-  "activate": "Aktivoida",
+  "activate": "Suojella",
   "activate_hint": "Järjestä salasanan sanat oikeassa järjestyksessä. Näin vahvistat, että olet säilyttänyt salasanan turvallisena. Muista, että et voi hallita tiliäsi ilman salasanaa.",
-  "activate_request_successful": "Aktivointipyyntö onnistui. Tilisi aktivoidaan hetken kuluttua.",
-  "activation_failed": "Aktivointi epäonnistui:",
-  "activation_success": "Aktivointipyyntö onnistui. Tilisi aktivoidaan hetken kuluttua.",
+  "activate_request_successful": "Tilin suojauspyyntö onnistui. Tilisi suojataan hetkessä.",
+  "activation_failed": "Suojaus epäonnistui:",
+  "activation_success": "Suojauspyyntö onnistui. Tilisi suojataan hetkessä.",
   "add_message_q": "Lisää viesti?",
   "add_note_to_self_q": "Lisätäänkö huomautus Itselle?",
   "add_recipient": "Lisää vastaanottaja",
@@ -246,7 +246,7 @@
   "no": "Ei",
   "no_messages_available": "Ei viestejä saatavilla.",
   "no_public_key_activate": "Tämä tili ei ole turvallinen. Napsauta suojataksesi tilisi.",
-  "no_public_key_warning": "Varoitus !: Tililläsi ei ole julkista avainta! Tämä tarkoittaa, että se ei ole yhtä suojattu kuin muut tilit. Aktivoi tilisi saadaksesi julkisen avaimen.",
+  "no_public_key_warning": "Varoitus! Tililläsi ei ole julkista avainta! Tämä tarkoittaa, että tilillä ei ole turvallista olla varoja. Aktivoi/suojaa tilisi saadaksesi julkisen avaimesi.",
   "no_transactions_yet": "Ei tapahtumia vielä.",
   "node_hint_no_multiout": "Ei multiout-maksuja tueta",
   "node_not_set": "Solmua ei voitu vaihtaa. Todennäköisimmin se ei ole tavoitettavissa.",
@@ -523,5 +523,10 @@
   "account_offline": "Vain katselu",
   "account_safe": "Turvallinen",
   "account_unsafe": "Turvaton!",
-  "error_connection_fail": "Ei voitu muodostaa yhteyttä solmuun. Näyttää siltä, että se ei ole tavoitettavissa. Ole hyvä ja valitse toinen"
+  "error_connection_fail": "Ei voitu muodostaa yhteyttä solmuun. Näyttää siltä, että se ei ole tavoitettavissa. Ole hyvä ja valitse toinen",
+  "delete_selected": "Poista valitut",
+  "confirm_delete_accounts": "Vahvista poisto",
+  "confirm_delete_accounts_hint": "Tilit poistetaan vain tästä sovelluksesta. Kaikki rahasi tallennetaan turvallisesti lohkoketjuun ja voit aina tuoda poistetut tilit uudelleen tunnuslauseesi avulla.",
+  "confirm_delete_accounts_q": "Haluatko varmasti poistaa nämä tilit?",
+  "account_successfully_deleted": "Tilit poistettu onnistuneesti"
 }
