--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -3,7 +3,7 @@
   "account_added": "A conta engadiuse correctamente",
   "account_balance": "Saldo da conta",
   "account_create_new": "Crea unha nova conta",
-  "account_create_new_short": "Nova conta",
+  "account_create_new_short": "Crear conta",
   "account_created": "Creouse a túa conta",
   "account_id": "ID de conta",
   "account_import": "Importar conta existente",
@@ -13,11 +13,11 @@
   "account_watch_short": "Ver conta",
   "accounts": "Contas",
   "actions": "Accións",
-  "activate": "Activar",
+  "activate": "Protexer",
   "activate_hint": "Organice as palabras da frase de acceso na orde correcta. Ao facelo, confirma que mantivo a frase de acceso segura. Ten en conta que non poderás controlar a túa conta sen a frase de acceso.",
-  "activate_request_successful": "Activación solicitada correctamente. A túa conta activarase nuns momentos.",
-  "activation_failed": "Fallou a activación:",
-  "activation_success": "Activación solicitada correctamente. A túa conta activarase nuns momentos.",
+  "activate_request_successful": "A protección da conta solicitouse correctamente. A túa conta estará protexida nuns momentos.",
+  "activation_failed": "Fallou a protección:",
+  "activation_success": "Protección solicitada correctamente. A túa conta estará protexida nuns momentos.",
   "add_message_q": "¿Engadir unha mensaxe?",
   "add_note_to_self_q": "Queres engadir unha nota a ti mesmo?",
   "add_recipient": "Engadir destinatario",
@@ -246,7 +246,7 @@
   "no": "Non",
   "no_messages_available": "Non hai mensaxes dispoñibles.",
   "no_public_key_activate": "Esta conta non é segura. Fai clic para protexer a túa conta.",
-  "no_public_key_warning": "Aviso !: A túa conta non ten unha clave pública. Isto significa que non está tan protexido como outras contas. Active a súa conta para obter a súa clave pública.",
+  "no_public_key_warning": "Aviso! A túa conta non ten unha chave pública. Isto significa que non é seguro ter fondos nesa conta. Active/protexa a súa conta para obter a súa clave pública.",
   "no_transactions_yet": "Aínda non hai transaccións.",
   "node_hint_no_multiout": "Non se admiten pagamentos con varias saídas",
   "node_not_set": "Non se puido cambiar de nodo. O máis probable é que non se poida chegar.",
@@ -523,5 +523,10 @@
   "account_offline": "Só ver",
   "account_safe": "Seguro",
   "account_unsafe": "Inseguro!",
-  "error_connection_fail": "Non se puido conectar a un nodo. Parece que non é accesible. Por favor, escolle outro"
+  "error_connection_fail": "Non se puido conectar a un nodo. Parece que non é accesible. Por favor, escolle outro",
+  "delete_selected": "Eliminar seleccionados",
+  "confirm_delete_accounts": "Confirmar a eliminación",
+  "confirm_delete_accounts_hint": "As contas eliminaranse só desta aplicación. Todos os teus fondos almacénanse de forma segura na cadea de bloques e sempre podes volver importar as contas eliminadas coa túa frase de acceso.",
+  "confirm_delete_accounts_q": "Estás seguro de que queres eliminar estas contas?",
+  "account_successfully_deleted": "Elimináronse as contas correctamente"
 }
