--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -3,7 +3,7 @@
   "account_added": "Paskyra sėkmingai pridėta",
   "account_balance": "Sąskaitos balansas",
   "account_create_new": "Sukurti naują paskyrą",
-  "account_create_new_short": "Nauja paskyra",
+  "account_create_new_short": "Sukurti paskyrą",
   "account_created": "Jūsų paskyra sukurta",
   "account_id": "Sąskaitos identifikavimo kodas",
   "account_import": "Importuoti esamą paskyrą",
@@ -13,11 +13,11 @@
   "account_watch_short": "Žiūrėti sąskaitą",
   "accounts": "Sąskaitos",
   "actions": "Veiksmai",
-  "activate": "Suaktyvinti",
+  "activate": "Apsaugoti",
   "activate_hint": "Sutvarkykite slaptafrazės žodžius teisinga tvarka. Tai darydami jūs patvirtinate, kad slaptafrazę saugojote. Atminkite, kad be slaptafrazės negalėsite valdyti savo paskyros.",
-  "activate_request_successful": "Sėkmingai paprašyta suaktyvinti. Jūsų paskyra bus suaktyvinta po kelių akimirkų.",
-  "activation_failed": "Nepavyko suaktyvinti:",
-  "activation_success": "Sėkmingai paprašyta suaktyvinti. Jūsų paskyra bus suaktyvinta po kelių akimirkų.",
+  "activate_request_successful": "Sėkmingai pateikta paskyros apsaugos užklausa. Jūsų paskyra bus apsaugota po kelių akimirkų.",
+  "activation_failed": "Apsauga nepavyko:",
+  "activation_success": "Sėkmingai pateikta apsaugos užklausa. Jūsų paskyra bus apsaugota po kelių akimirkų.",
   "add_message_q": "Pridėti pranešimą?",
   "add_note_to_self_q": "Pridėti pastabą prie savęs?",
   "add_recipient": "Pridėti gavėją",
@@ -246,7 +246,7 @@
   "no": "Ne",
   "no_messages_available": "Nėra jokių pranešimų.",
   "no_public_key_activate": "Ši paskyra nėra saugi. Spustelėkite, kad apsaugotumėte savo paskyrą.",
-  "no_public_key_warning": "Įspėjimas !: Jūsų paskyroje nėra viešojo rakto! Tai reiškia, kad ji nėra taip apsaugota kaip kitos paskyros. Norėdami gauti viešąjį raktą, suaktyvinkite savo sąskaitą.",
+  "no_public_key_warning": "Įspėjimas! Jūsų paskyra neturi viešojo rakto! Tai reiškia, kad nesaugu turėti lėšų toje sąskaitoje. Norėdami gauti viešąjį raktą, suaktyvinkite / apsaugokite savo paskyrą.",
   "no_transactions_yet": "Dar nėra jokių operacijų.",
   "node_hint_no_multiout": "Nepalaikomi keli mokėjimai",
   "node_not_set": "Nepavyko pakeisti mazgo. Labiausiai tikėtina, kad jo negalima pasiekti.",
@@ -523,5 +523,10 @@
   "account_offline": "Tik žiūrėti",
   "account_safe": "Saugus",
   "account_unsafe": "Nesaugu!",
-  "error_connection_fail": "Nepavyko prisijungti prie mazgo. Atrodo, kad jis nepasiekiamas. Prašome pasirinkti kitą"
+  "error_connection_fail": "Nepavyko prisijungti prie mazgo. Atrodo, kad jis nepasiekiamas. Prašome pasirinkti kitą",
+  "delete_selected": "Pašalinti pasirinktą",
+  "confirm_delete_accounts": "Patvirtinkite pašalinimą",
+  "confirm_delete_accounts_hint": "Paskyros bus pašalintos tik iš šios programos. Visos jūsų lėšos saugiai saugomos „blockchain“ ir jūs visada galite iš naujo importuoti pašalintas paskyras naudodami savo slaptafrazę.",
+  "confirm_delete_accounts_q": "Ar tikrai norite pašalinti šias paskyras?",
+  "account_successfully_deleted": "Paskyra (-os) sėkmingai pašalinta (-os)."
 }
