--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -3,7 +3,7 @@
   "account_added": "Hesap başarıyla eklendi",
   "account_balance": "Hesap bakiyesi",
   "account_create_new": "Yeni bir hesap oluştur",
-  "account_create_new_short": "Yeni hesap",
+  "account_create_new_short": "Hesap oluştur",
   "account_created": "Hesabınız oluşturuldu",
   "account_id": "Hesap Kimliği",
   "account_import": "Mevcut hesabı içe aktar",
@@ -13,11 +13,11 @@
   "account_watch_short": "Hesabı İzle",
   "accounts": "Hesaplar",
   "actions": "Hareketler",
-  "activate": "etkinleştir",
+  "activate": "Korumak",
   "activate_hint": "Lütfen parolanın sözcüklerini doğru sırada düzenleyin. Bunu yaparak, parolayı güvende tuttuğunuzu onaylamış olursunuz. Parola olmadan hesabınızı kontrol edemeyeceğinizi unutmayın.",
-  "activate_request_successful": "Aktivasyon başarıyla istendi. Hesabınız birkaç dakika içinde etkinleştirilecektir.",
-  "activation_failed": "Etkinleştirme başarısız oldu:",
-  "activation_success": "Aktivasyon başarıyla istendi. Hesabınız birkaç dakika içinde etkinleştirilecektir.",
+  "activate_request_successful": "Hesap koruması başarıyla istendi. Hesabınız birkaç dakika içinde korunacaktır.",
+  "activation_failed": "Koruma başarısız oldu:",
+  "activation_success": "Koruma başarıyla istendi. Hesabınız birkaç dakika içinde korunacaktır.",
   "add_message_q": "Mesaj Ekle?",
   "add_note_to_self_q": "Kendine Not Ekle?",
   "add_recipient": "Alıcı ekle",
@@ -245,8 +245,8 @@
   "next_block": "Sonraki blok",
   "no": "Hayır",
   "no_messages_available": "Mesaj yok.",
-  "no_public_key_activate": "Bu hesap güvenli değil. Hesabınızı güvence altına almak için tıklayın.",
-  "no_public_key_warning": "Uyarı!: Hesabınızın açık anahtarı yok! Bu, diğer hesaplar kadar korumalı olmadığı anlamına gelir. Genel anahtarınızı almak için lütfen hesabınızı etkinleştirin.",
+  "no_public_key_activate": "Bu hesap güvenli değil. Hesabınızı korumak için tıklayın.",
+  "no_public_key_warning": "Uyarı! Hesabınızın ortak anahtarı yok! Bu, o hesapta para bulundurmanın güvenli olmadığı anlamına gelir. Genel anahtarınızı almak için lütfen hesabınızı etkinleştirin/koruyun.",
   "no_transactions_yet": "Henüz işlem yok.",
   "node_hint_no_multiout": "Çoklu ödeme desteklenmez",
   "node_not_set": "Düğüm değiştirilemedi. Büyük ihtimalle ulaşılamıyor.",
@@ -523,5 +523,10 @@
   "account_offline": "Yalnızca İzle",
   "account_safe": "Güvenli",
   "account_unsafe": "güvensiz!",
-  "error_connection_fail": "Bir düğüme bağlanılamadı. Ulaşılamaz gibi görünüyor. Lütfen başka birini seçiniz"
+  "error_connection_fail": "Bir düğüme bağlanılamadı. Ulaşılamaz gibi görünüyor. Lütfen başka birini seçiniz",
+  "delete_selected": "Seçileni Kaldır",
+  "confirm_delete_accounts": "Kaldırmayı Onayla",
+  "confirm_delete_accounts_hint": "Hesaplar sadece bu uygulamadan kaldırılacaktır. Tüm paranız blok zincirinde güvenli bir şekilde saklanır ve kaldırılan hesapları parolanızla her zaman yeniden içe aktarabilirsiniz.",
+  "confirm_delete_accounts_q": "Bu hesapları kaldırmak istediğinizden emin misiniz?",
+  "account_successfully_deleted": "Hesap(lar) başarıyla kaldırıldı"
 }
